--- a/Core.UnitTests/ReleaseProcessScript.Test.Config
+++ b/Core.UnitTests/ReleaseProcessScript.Test.Config
@@ -24,8 +24,8 @@
         <fileName>Build/Customizations/Version.props</fileName>
     </developStableMergeIgnoreList>
     <msBuildSettings>
-        <msBuildPath>C:\Program Files\Microsoft Visual Studio\2022\Professional\MSBuild\Current\Bin\MSBuild.exe</msBuildPath>
-        <alternativeMSBuildPath>C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe</alternativeMSBuildPath>
+        <msBuildPath>C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\MSBuild\Current\Bin\msbuild.exe</msBuildPath>
+        <alternativeMSBuildPath>C:\Program Files\Microsoft Visual Studio\2022\Professional\MSBuild\Current\Bin\MSBuild.exe</alternativeMSBuildPath>
     </msBuildSettings>
     <prepareNextVersionMsBuildSteps>
         <step>
