RMRPA-41 Add bearer authentication as an option for internal jira

--- a/Core.IntegrationTests/ReleaseProcessScript.Test.Config
+++ b/Core.IntegrationTests/ReleaseProcessScript.Test.Config
@@ -3,7 +3,7 @@
     <jira>
         <jiraUrl>https://re-motion.atlassian.net</jiraUrl>
         <jiraProjectKey>SRCBLDTEST</jiraProjectKey>
-        <useNTLM>no</useNTLM>
+        <useBearerAuth>no</useBearerAuth>
     </jira>
     <remoteRepositories>
         <remoteName>origin</remoteName>
